data/derived/sp14/progs/unify/prog0401.ml.out
Characters 45-59:
  let temp = List.fold_left (fun x y-> x+y) 1 [(fun y -> y+1)];;
                                               ^^^^^^^^^^^^^^
Error: This expression should not be a function, the expected type is
int
